--- a/css/sondehubcard.css
+++ b/css/sondehubcard.css
@@ -6,3 +6,56 @@
 	font-size:20px;
 	line-height:40px;
 }
+
+.altitudebox {
+    background-color: white; 
+    border: 1px solid #0070a3; 
+    padding: 0.5em;
+}
+
+.altitudebox {
+    background-attachment:initial;
+    background-clip:initial;
+    background-color:rgb(255, 255, 255);
+    background-image:initial;
+    background-origin:initial;
+    background-position:initial initial;
+    background-repeat:initial initial;
+}
+
+.box {
+    background-color: white; 
+    border: 1px solid #0070a3; 
+    padding: 0.5em;
+}
+
+.box {
+    background-attachment:initial;
+    background-clip:initial;
+    background-color:rgb(255, 255, 255);
+	background-color:rgba(255, 255, 255, 0.746094);
+    background-image:initial;
+    background-origin:initial;
+    background-position:initial initial;
+    background-repeat:initial initial;
+}
+
+.box * {
+	font-size: 12px;
+}
+
+.box table { 
+	margin: 0.25em auto;
+	white-space: nowrap;
+}
+
+.box h1 { 
+	text-align: center;
+	margin: 0em 0em 0.5em 0em;
+}
+
+.box p { 
+	margin: 0 auto;
+	margin-bottom: 0.25em; 
+	width: 25em;
+}
